fix some front alignments

--- a/frontend/src/pages/styles.css
+++ b/frontend/src/pages/styles.css
@@ -2,9 +2,8 @@
   width: 480px;
   margin: 20px auto;
   padding: 20px;
-  height: 700px;
   align-content: center;
-  float: left;
+  float: flex;
   margin: 5px auto;
   padding: 5px;
   border-radius: 8px 8px 8px 8px;
@@ -12,7 +11,6 @@
 
 .pages-form-initial-container {
   max-width: 1020px;
-  height: 600px;
   margin: 20px auto;
   padding: 20px;
 }
@@ -23,43 +21,13 @@
   font-size: 14px;
   font-weight: 700;
   color: var(--color-primary);
-  width: 440px;
-  height: 525px;
+  max-width: 440px;
   align-content: center;
-  float: left;
+  float: flex;
   margin: 10px auto;
   padding: 10px;
   border-radius: 8px 8px 8px 8px;
 }
-
-.pages-image-initial-container {
-  background-color: #fff;
-  max-width: 540px;
-  height: 525px;
-  float: right;
-  margin: 10px auto;
-  padding: 10px;
-  border-radius: 8px 8px 8px 8px;
-}
-
-.pages-form-register-container {
-  max-width: 1020px;
-  height: 750px;
-  margin: 20px auto;
-  padding: 20px;
-}
-
-.pages-image-register-container {
-  background-color: #fff;
-  max-width: 480px;
-  height: 700px;
-  float: right;
-  align-content: center;
-  margin: 10px auto;
-  padding: 10px;
-  border-radius: 8px 8px 8px 8px;
-}
-
 
 .pages-form-class-container {
   max-width: 980px;
@@ -96,11 +64,10 @@
 
 .pages-card-bottom-container {
   background-color: #fff;
-  height: 700px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px 10px 20px 10px;
+  padding: 20px 10px 20px 10px;
   border-radius: 8px 8px 8px 8px;
   color: var(--color-primary);
 }
@@ -122,14 +89,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.float-child {
-  display: right;
-  flex-direction: column;
-  margin: 10px;
-  padding: 20px;
-  border: 2px solid red;
 }
 
 .list-table-container {
